--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello Suckers
+<p style="width:550px;">
+  After all the battles we faught together, after all the difficult times we saw together, after all the good and bad moments we've been through, I think it's time I let you know how I feel about you.
+</p>
+<p style="width:550px;">
+  You complete my darkness with your light. I love:
+  - the way you see good in the worse
+  - the way you handle emotionally difficult situations
+  - the way you look at Justice
+  I have learned a lot from you. You have occupied a special place in my heart over the time.
+</p>
