--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-Jeerey, you are the best & you are <3 /n
-
-Marry me, Jeerey?
-                                      
-                                      I'll rock your world 
+Jeerey, you are the best & you are <3. Literally, the best thing that had happened to me. 
