--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Jeerey, you are the best & you are <3. Literally, the best thing that had happened to me. 
+Jeerey, you are the best & I am so in love with you. 
